pkg/gox/testdata/errors/nested_markup_callback_error.gox
package main

import gf "github.com/graybuton/goframe/pkg/goframe"

func View(items []string) gf.Node {
	return <main>{gf.Map(items, func(item string) gf.Node {
		return <Item Label={item}></Wrong>
	})}</main>
}
